# optiFretSNCF

./: .TODO.md.swp  README.md  TODO.md
code/: pyproject.toml  requirements.toml
code/module/: code.py  constants.py  contraintes.py  contraintes2.py  modele.py  modele1.py  modele2.py  parser.py  tools.py  utils.py  utils1.py  utils2.py  visualisation.py  visualisation2.py  visualisation_gantt.py
code/notebooks/: A_executer.ipynb  Code Jalon 1.ipynb  Code jalon 1 refucktor.ipynb  Code jalon 1 refucktorbjkezsndx.ipynb  Code jalon 2.ipynb  Code plus d'actualité.ipynb  Code projet jalon 1.ipynb  aaaaaaaaa.ipynb  creation_dictionnaires.py  init_constraint.py  instance_WPY_realiste_jalon1_AVEC_MODIF.xlsx  main gurobi.py  mini_instance.xlsx  sortie_jalon2.xlsx  sortie_jalon3.xlsx  test.ipynb  test_max_recup_fichiers.ipynb
visualisation/: display_gantt.py  display_sankey.py  exemple_sortie.xlsx  instance_WPY_realiste_jalon1.xlsx  test.ipynb  test.py
